tests/Parse/test_1_r04.out
Error type B at Line 9: Missing closing parenthesis ')'
Error type B at Line 12: Missing closing parenthesis ')'
