tests/Parse/test_1_r04.spl
int func_1(int a)
{
  return 3 * a;
}
int func_2(int x, int y)
{
  return x + y;
}
int test_1_r04(
{
  int a, b, c;
  c = func_2(func_1(func_1(a+b*func_1(b)), 1.7);
  return c;
}
